Rails 3.0 compatible now

--- a/app/views/posts/_message_form.html.erb
+++ b/app/views/posts/_message_form.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>  
   
-  <% form_tag(:controller => "posts", :action => "create") do %>  
+  <%= form_tag (:controller => "posts", :action => "create") do %>  
     <%= label_tag(:message, "What are you doing?") %><br />  
     <%= text_area_tag(:message, nil, :size => "60x2") %><br />  
     <%= submit_tag("Update") %>  
